--- a/frontend/src/app/dashboard/login/login.component.html
+++ b/frontend/src/app/dashboard/login/login.component.html
@@ -47,7 +47,7 @@
         <div class="shape"></div>
     </div>
     <form id="createForm" [formGroup]="loginForm" (ngSubmit)="onLogin()">
-        <h3>Eber Taxi Login</h3>
+        <h3>Eber Ride Login</h3>
 
         <label for="username">Username</label>
         <input type="email" class="form-control" placeholder="Email or Phone" formControlName="email"
